--- a/.github/workflows/Lede_X86-64.yml
+++ b/.github/workflows/Lede_X86-64.yml
@@ -6,7 +6,7 @@
 # Blog: https://p3terx.com
 #=================================================
 
-name: Build ImmortalWrt21.02 X86_64
+name: Build LEDE X86_64
 
 on:
   repository_dispatch:
