--- a/.github/workflows/Lede_X86-64.yml
+++ b/.github/workflows/Lede_X86-64.yml
@@ -417,7 +417,7 @@ jobs:
         uses: mknejp/delete-release-assets@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}-lede
+          tag: ${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}-LEDE
           fail-if-no-assets: false
           fail-if-no-release: false
           assets: "*"
@@ -426,10 +426,10 @@ jobs:
         uses: ncipollo/release-action@v1.8.0
         if: env.FIRMWARE_RELEASE_UPLOAD == 'true'
         with:
-          name: ${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}-lede
+          name: ${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}-LEDE
           allowUpdates: true
           replacesArtifacts: true
-          tag: ${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}-lede
+          tag: ${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}-LEDE
           body: ${{ env.BUILD_DATE }}
           commit: ${{ env.CURRENT_BRANCH }}
           token: ${{ secrets.GITHUB_TOKEN }}
